--- a/stilo.css
+++ b/stilo.css
@@ -175,7 +175,8 @@ header p {
 
 #game-over{
   position: absolute;
-  width: 100%;
+  width: 80%;
+  left:10%;
   height: auto;
   transition: none;
 }
